# LeetCode

./: README.md  clearbin.sh
lc001/project/: run_myprocess.sh
lc001/project/include/: Split.h  TwoSum.h
lc001/project/source/: Split.cpp  TwoSum.cpp  main.cpp
lc002/: demand
lc002/project/: run_myprocess.sh
lc002/project/include/: DefPublic.h  List.h
lc002/project/source/: DefPublic.cpp  List.cpp  main.cpp
lc003/: demand
lc003/project/: run_myprocess.sh
lc003/project/include/: DefPublic.h
lc003/project/source/: DefPublic.cpp  main.cpp
lc004/: demand
lc004/project/: run_myprocess.sh
lc004/project/include/: DefPublic.h
lc004/project/source/: DefPublic.cpp  main.cpp
lc005/: demand
lc005/project/: run_myprocess.sh
lc005/project/include/: DefPublic.h
lc005/project/source/: DefPublic.cpp  main.cpp
lc006/: demand
lc006/project/: run_myprocess.sh
lc006/project/include/: DefPublic.h
lc006/project/source/: DefPublic.cpp  main.cpp
lc007/: demand
lc007/project/: run_myprocess.sh
lc007/project/include/: DefPublic.h
lc008/: demand
lc008/project/: run_myprocess.sh
lc009/: demand
lc009/project/: run_myprocess.sh
lc010/: demand
lc010/project/: run_myprocess.sh
lc011/: demand
lc011/project/: run_myprocess.sh
lc012/: demand
lc012/project/: run_myprocess.sh
lc013/: demand
lc013/project/: run_myprocess.sh
lc014/: demand
lc014/project/: CMakeLists.txt  run_myprocess.sh
lc014/project/include/: DefPublic.h
lc014/project/source/: DefPublic.cpp  main.cpp
lc015/: demand
lc015/project/: build.sh  run_myprocess.sh
(+23 files in other folders)
